--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
+.app {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app_board {
+  width: 800px;
+  display: grid;
+  grid-template-rows: repeat(8, 100px);
+  border: 1px solid black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+.box {
+  display: "flex";
+
+  border: 1px solid black;
+  box-sizing: border-box;
+  background-color: rgb(254, 206, 161);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.row:nth-child(2n + 1) .box:nth-child(2n) {
+  background-color: rgb(208, 139, 76);
+}
+.row:nth-child(2n) .box:nth-child(2n + 1) {
+  background-color: rgb(208, 139, 76);
 }
